fixed the whitespace at the bottom of the page in firefox

--- a/symfony_project/web/styles.css
+++ b/symfony_project/web/styles.css
@@ -10,11 +10,10 @@ html, body {
     background-color: #71BA62;
     width: calc(100% - 200px);
     float: right;
-    height: calc(100% - 100px);
+    height: calc(100vh - 100px);
     overflow-y: scroll;
 	overflow-x: hidden;
     margin-top: 100px;
-
 }
 
 .nav-path {
